# gamelauncher

./: .env.example  .gitignore  FUTURE_FEATURES.md  cors.json  package-lock.json  package.json  ps2TitleRef.js  ps2TitleRef.json  ps3TitleMap.js  ps3TitleRef.js  ps3TitleRef.json  slusMap.js  slusMap.json
.github/workflows/: release.yml
scripts/: fetch-ps2-title-ref.mjs  fetch-ps3-title-ref.mjs
src/: App.jsx  firebase.js  index.css  tempHelpers.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs  process.rs
src/components/: Ps2CubeBackground.css  Ps2CubeBackground.jsx  Ps3WaveBackground.css  Ps3WaveBackground.jsx  addBtn.jsx  addEmulatorModal.jsx  addGamesModal.jsx  gameCard.css  gameCard.jsx  gameDetailsAside.css  gameDetailsAside.jsx  launcherCard.css  launcherCard.jsx  modal.css  settingsBtn.css  settingsBtn.jsx  settingsPage.css  settingsPage.jsx  syncBtn.jsx  test.jsx
src/components/nav/: libraryNav.css  libraryNav.jsx
src/components/utils/: coverHeaders.js  duplicateGames.js  firebaseHelpers.js  launchers.js  mediaFinder.js  openFolderLocation.js  scanners.js  steamGridDb.js  storageManager.js
src/context/: AppContext.jsx
