[package]
name = "game-launcher"
version = "0.1.0"
description = "Game Launcher"
authors = ["you"]
edition = "2021"
rust-version = "1.70"

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
tauri = { version = "1", features = [ "fs-read-dir", "shell-open", "fs-exists", "fs-read-file", "os-all", "dialog-confirm", "dialog-ask", "dialog-open", "dialog-message", "path-all"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
