[package]
name = "game-launcher"
version = "0.1.0"
description = "Game Launcher"
authors = ["you"]
edition = "2021"
rust-version = "1.70"

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
reqwest = { version = "0.12.23", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.144"
tauri = { version = "1", features = [ "fs-create-dir", "fs-write-file", "shell-all", "fs-read-dir", "fs-exists", "fs-read-file", "os-all", "dialog-confirm", "dialog-ask", "dialog-open", "dialog-message", "path-all"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
